--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "gatsby build",
     "develop": "gatsby develop",
     "start": "npm run develop",
-    "serve": "gatsby serve"
+    "serve": "gatsby serve",
+    "now-build": "gatsby build"
   },
   "repository": {
     "type": "git",
