--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "url": "https://github.com/carbon-design-system/gatsby-starter-carbon-theme"
   },
   "dependencies": {
-    "gatsby": "^2.7.3",
+    "@carbon/icons-react": "^10.3.0",
+    "gatsby": "^2.9.4",
     "gatsby-theme-carbon": "^1.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
